--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -9,7 +9,11 @@ build.sysclasspath=ignore
 build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
 debug.classpath=${run.classpath}
+debug.modulepath=\
+    ${run.modulepath}
 debug.test.classpath=${run.test.classpath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 dist.dir=dist
 dist.jar=${dist.dir}/AplikasiRentalKendaraan.jar
 dist.javadoc.dir=${dist.dir}/javadoc
@@ -22,10 +26,14 @@ javac.classpath=\
     ${file.reference.mysql-connector-j-8.2.0.jar}
 javac.compilerargs=
 javac.deprecation=false
+javac.modulepath=
+javac.processormodulepath=
 javac.processorpath=${javac.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=${javac.classpath}:${build.classes.dir}
+javac.test.modulepath=\
+    ${javac.modulepath}
 javac.test.processorpath=${javac.test.classpath}
 javadoc.additionalparam=
 javadoc.author=false
@@ -45,6 +53,10 @@ mkdist.disabled=false
 platform.active=default_platform
 run.classpath=${javac.classpath}:${build.classes.dir}
 run.jvmargs=
+run.modulepath=\
+    ${javac.modulepath}
 run.test.classpath=${javac.test.classpath}:${build.test.classes.dir}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
